# MEM-CF

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
agent_memory/: README.md
configs/: env.example  memcf_100strong_base.env
data/: README.md
docs/: ABLATIONS.md  DATA_FORMAT.md  TRACE_FORMAT.md
evaluation_results/: README.md
scripts/: aggregate_paper_tables.py  analyze_af_hybrid.py  analyze_d_constraints.py  analyze_f_cf.py  analyze_g_cf.py  analyze_memcf_traces.py  build_runtime_from_amazon_raw.py  clean_runtime_dataset.py  compare_memory_vs_nomemory.py  export_readable_traces.py  merge_memory_shards.py  merge_shared_memory_shards.sh  rebuild_amazon_music_runtime.py  recompute_ranking_metrics.py  run_100strong_reproduce.sh  run_16_ablation_jobs.sh  run_ablation_jobs.sh  run_ablation_one_dataset.sh  run_af_hybrid_6datasets_100u.sh  run_cluster_eval_jobs.sh  run_control_ablation_6datasets.sh  run_d_typed_constraints_6datasets_100u.sh  run_f_cf_6datasets_100u.sh  run_g_cf_controls_6datasets_100u.sh  run_mainpaper_ablation_pipeline.sh  run_mainpaper_eval_jobs.sh  run_mainpaper_train_memory_jobs.sh  run_nomemory_eval_jobs.sh  run_pairwise_cf_6datasets_100u.sh  run_shared_memory_eval_jobs.sh  run_shared_memory_train_shards.sh  run_smoke.sh  run_wrong_only_gate_experiment.sh  upload_new_amazon_raw_to_server.sh
src/memcf/: __init__.py  __main__.py  experiment.py
