[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memcf"
version = "0.2.0"
description = "Memory-Enhanced Collaborative Failure Learning for Recommendation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MEMCF authors" }]
dependencies = [
  "numpy>=1.24",
  "tqdm>=4.66",
  "torch>=2.0",
  "transformers>=4.40",
  "sentence-transformers>=2.7"
]

[project.scripts]
memcf = "memcf.experiment:main_v2"

[tool.setuptools.packages.find]
where = ["src"]
